fix(client): handle navbar style in high contrast mode

--- a/client/src/components/Header/components/universal-nav.css
+++ b/client/src/components/Header/components/universal-nav.css
@@ -7,11 +7,18 @@
   height: var(--header-height);
   justify-content: space-between;
   padding: 0 5px;
+  forced-color-adjust: none;
 }
 
 @media (min-width: 401px) {
   .universal-nav {
     padding: 0 15px;
+  }
+}
+
+@media (forced-colors) {
+  .universal-nav {
+    background-color: var(--gray-90);
   }
 }
 
